--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enhanced To-Do List</title>
+  <title>Restart Enhanced To-Do List</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -79,7 +79,7 @@
       justify-content: space-between;
       align-items: center;
       transition: background-color 0.3s;
-      border-left: 4px solid #3498db;
+     
     }
 
     .todo-item:hover {
@@ -176,16 +176,14 @@
 <body>
 
 <div class="container">
-  <h1>My To-Do List</h1>
+  <h1>To-Do List</h1>
   
   <div class="input-group">
     <input type="text" id="taskInput" placeholder="Add a new task...">
     <button class="add-btn" id="addButton">Add</button>
   </div>
   
-  <ul id="taskList">
-    <!-- Tasks will be added here -->
-  </ul>
+  <ul id="taskList"></ul>
   
   <div class="stats" id="stats">
     Total tasks: 0 | Completed: 0
